save, view relation inter PHAIDRA objects

--- a/form_phaidra/formphaidra.html
+++ b/form_phaidra/formphaidra.html
@@ -1,4 +1,4 @@
-<form method="post" action="upload.php">
+<form method="post" action="phaidradc.php">
 
   <br>Inserisci il tuo indirizzo DC (esempio:http://phaidradev.cab.unipd.it/api/object/o:61349/dc)</br>
   <head>
@@ -9,7 +9,7 @@
   
   
   <input type="text" name="dc"><br>
-  <input type="submit" value="immagine">
+  <input type="submit" value="Scarica DC->JSON">
 </form>
 
 
