--- a/motore2/motore2.html
+++ b/motore2/motore2.html
@@ -2,7 +2,7 @@
   <head>
 <link rel="stylesheet" type="text/css" href="https://phaidra-static.cab.unipd.it/stylesheets/css/unipdstyle.css">
 
-<form method="post" action="ricerca_dc2.php">
+<form method="post" action="ricercaoggetto.php">
 <input type="text" name="keywords">
 <input type="submit" name="submit" value="submit">
 </form>
